--- a/.github/workflows/UI.yml
+++ b/.github/workflows/UI.yml
@@ -1,33 +1,23 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Cypress
 
-# Controls when the workflow will run
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
 
-  # Triggers the workflow on push or pull request events but only for the "main" branch
- push:
-    branches: [ "main" ]
- pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
- workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
- cypress_tests:
-  if: ${{ contains(github.event.head_commit.modified, 'cypress') }}
-  runs-on: ubuntu-latest
+  cypress_tests:
+    if: ${{ contains(github.event.head_commit.modified, 'cypress') }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-  steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
 
-      # Runs a single command using the runners shell
-    - name: Install dependencies
-      run: npm install
+      - name: Run Cypress tests
+        run: npx cypress run
 
-    - name: Run Cypress tests
-      run: npx cypress run 
