--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,21 +2,19 @@
 
 name: Postman
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
+    paths:
+      - 'postman/collections/Instagram.json'
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    paths:
+      - 'postman/collections/Instagram.json'
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   postman_tests:
-    #if: ${{ contains(github.event.head_commit.modified, 'postman') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,5 +22,5 @@ jobs:
         run: echo Hello, world!
       - name: Run a multi-line script
         run: |
-            npm instal -g postman
-            newman run "postman/collections/Inctagram.json" -e "workspace.postman_globals.json" -e "Instagram environment.postman_environment.json" --global-var "API_KEY= ${{secrets.API_KEY}}"
+          npm install -g postman
+          newman run "postman/collections/Instagram.json" -e "workspace.postman_globals.json" -e "Instagram environment.postman_environment.json" --global-var "API_KEY=${{secrets.API_KEY}}"
