--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,9 +4,9 @@ name: Postman
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "integr" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "integr" ]
     
   workflow_dispatch:
 
