--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.7.1"
+    "cypress": "^13.7.1",
+    "faker": "^6.6.6"
   }
 }
